--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             <p class="lead">Market Entry — Australia (Primary) & Indonesia (Secondary)</p>
             <div class="columns">
               <div class="box" style="flex:1">
-                <h3 style="margin-top:0">Pitch for a founder</h3>
-                <p class="muted">Position Nateskin as "Premium performance at an honest price" —> use Amazon credibility + creator-led product proof to rapidly reduce friction and CAC.</p>
+                <h3 style="margin-top:0">Pitch</h3>
+                <p class="muted">Position Nateskin as "Premium performance at an honest price" —> use Amazon credibility + creator-led product proof to rapidly reduce friction and CAC (Customer Acquisition Cost).</p>
                 <div style="margin-top:12px">
                   <button class="btn" id="replayHero">Play product demo →</button>
                 </div>
@@ -132,10 +132,10 @@
               <div class="box" style="flex:1">
                 <h3>Weaknesses</h3>
                 <ul>
-                  <li>Very low presence on Amazon/Walmart/Reddit</li>
+                  <li>Very low presence on Amazon, Reddit or and other major Western marketplaces</li>
                   <li>Limited reviews outside SEA</li>
                   <li>Occasional negative mentions: blade rusting / nicks</li>
-                  <li>Not known in western markets</li>
+                  <li>Low brand awareness in western markets</li>
                 </ul>
               </div>
             </div>
@@ -148,10 +148,10 @@
             <div style="display:flex;gap:12px;margin-top:10px;align-items:flex-start">
               <div class="box" style="flex:1">
                 <ul>
-                  <li>🇦🇺 A$1.2B grooming market, +15% YoY</li>
-                  <li>High acceptance of intimate grooming</li>
-                  <li>Manscaped dominates — price gap for Nateskin</li>
-                  <li>Consumers trust Amazon reviews — Nateskin absent</li>
+                  <li>🇦🇺 A$1.2B men’s grooming market, growing ~15% YoY</li>
+                  <li>High acceptance of intimate grooming products</li>
+                  <li>Manscaped dominates, creating a clear price gap for Nateskin</li>
+                  <li>Consumers rely heavily on Amazon reviews, where Nateskin is absent</li>
                   <li>Influencer + gym culture = strong channels</li>
                 </ul>
               </div>
@@ -172,10 +172,10 @@
             <div class="columns" style="margin-top:12px">
               <div class="box" style="flex:1">
                 <ul>
-                  <li>🇮🇩 E-commerce grooming +25% YoY</li>
-                  <li>Price-sensitive — Nateskin's affordability wins</li>
-                  <li>Local competitors are low-quality</li>
-                  <li>Influencer-led conversions are strong</li>
+                  <li>🇮🇩 E-commerce grooming market growing ~25% YoY</li>
+                  <li>Highly price-sensitive segment — Nateskin’s affordability is an advantage</li>
+                  <li>Many local competitors are low-quality and generic</li>
+                  <li>Influencer-led conversions on TikTok/Shopee are very strong</li>
                   <li>Cultural similarity to Malaysia</li>
                 </ul>
               </div>
