--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="logo">NZ</div>
       <div class="title">
         <h1>Nateskin Expansion Strategy — Australia & Indonesia (2025–26)</h1>
-        <p class="muted">Aliya Zeya | Marketing & Growth Strategy — interactive prototype</p>
+        <p class="muted">Aliya Zeya | Marketing & Growth Strategy —> interactive prototype</p>
       </div>
     </header>
 
